--- a/index.html
+++ b/index.html
@@ -51,39 +51,25 @@
 
     <div class="section">
         <h2>Summary</h2>
-        <p>Data Scientist with experience in machine learning, SQL, Power BI, deep learning, and time series analysis.
-        Skilled in extracting insights and developing scalable solutions to drive business success. Expertise in optimizing
-        data pipelines and building high-accuracy models for loan prediction, optimization, and churn analysis.
-        Strong background in predictive modeling and statistical analysis to support data-driven strategies.</p>
+        <p>Data Scientist with 3+ years of experience in machine learning, SQL, Power BI, deep learning, and time series analysis.
+        Skilled in developing scalable solutions and machine learning models for sales prediction, optimization, and churn analysis.
+        Strong background in statistical analysis and turning complex data into actionable insights for business growth.</p>
     </div>
 
     <div class="section">
         <h2>Experience</h2>
         <h3>Data Scientist – Motaqademah Company (Mar 2022 – Present)</h3>
         <ul>
-            <li>Engineered ETL pipelines to solve integration issues and improve data quality.</li>
-            <li>Developed ML models for sales insight and decision-making support.</li>
-            <li>Streamlined workflows, eliminating manual effort and boosting efficiency.</li>
+            <li>Built robust ETL pipelines and machine learning models for sales and segmentation.</li>
+            <li>Improved data workflows and ensured ethical data use.</li>
         </ul>
-
-        <h3>Master’s Researcher in Data Science (Oct 2020 – Present)</h3>
+        <h3>Business Analyst – Motaqademah Company (Jan 2021 – Present)</h3>
         <ul>
-            <li>Enhanced customer segmentation using ML to improve campaign performance.</li>
-            <li>Applied statistical tests and hypotheses validation to support business insights.</li>
-            <li>Addressed bias and fairness in data usage with ethical practices.</li>
+            <li>Created SQL queries and dashboards to track KPIs and automate reporting.</li>
         </ul>
-
-        <h3>Business Analyst – Thyab Company (Oct 2022 – 2025)</h3>
+        <h3>Lecturer in Mathematics and Statistics – Riyadh (2013 – 2020)</h3>
         <ul>
-            <li>Developed SQL-based data flows and maintained automated data models.</li>
-            <li>Created KPI tracking dashboards and reports to support strategic decisions.</li>
-            <li>Ensured data normalization, integrity, and quality across systems.</li>
-        </ul>
-
-        <h3>Math and Statistics Trainer – Motaqademah Schools, Riyadh (2013 – 2019)</h3>
-        <ul>
-            <li>Developed engaging teaching strategies using real-world problems.</li>
-            <li>Simplified complex concepts for better student understanding and retention.</li>
+            <li>Taught university-level mathematics using interactive and applied techniques.</li>
         </ul>
     </div>
 
@@ -108,12 +94,11 @@
     <div class="section">
         <h2>Projects</h2>
         <ul>
-            <li>Designed Power BI dashboards using DAX to improve KPI clarity.</li>
-            <li>Built churn prediction models using Logistic Regression & Random Forest.</li>
-            <li>Applied feature engineering to build accurate house price regression models.</li>
-            <li>Built LSTM networks for time-series forecasting of stock prices.</li>
-            <li>Created fraud detection systems using Random Forests and Gradient Boosting.</li>
-            <li>Used KNN, Naive Bayes, and SVM for improving diagnostic prediction accuracy.</li>
+            <li>Interactive dashboards in Power BI to enhance KPI clarity</li>
+            <li>Customer churn prediction model using Logistic Regression & Random Forest</li>
+            <li>Regression model for house price prediction using advanced feature engineering</li>
+            <li>LSTM network for time-series forecasting of stock prices</li>
+            <li>Fraud detection system using Random Forests and Gradient Boosting</li>
         </ul>
     </div>
 
@@ -121,16 +106,15 @@
         <h2>Technical Skills</h2>
         <ul>
             <li><strong>Languages:</strong> Python, SQL</li>
-            <li><strong>BI & Analytics:</strong> Power BI, BigQuery, Data Visualization</li>
-            <li><strong>Databases & ETL:</strong> SQL Server, MongoDB, Azure SQL, DWH, ETL Pipelines</li>
-            <li><strong>ML & AI:</strong> TensorFlow, Keras, XGBoost, LightGBM, Predictive Analytics</li>
-            <li><strong>Tools:</strong> Excel, PowerPoint</li>
+            <li><strong>Tools & Platforms:</strong> Power BI, BigQuery, SQL Server, MongoDB, AWS, GCP</li>
+            <li><strong>ML Frameworks:</strong> TensorFlow, Keras, XGBoost, LightGBM</li>
+            <li><strong>Other:</strong> Power Automate, SSIS, SSRS, Salesforce</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>Soft Skills</h2>
-        <p>Analytical Thinking, Data Storytelling, Collaboration, Leadership, Time Management, Innovation, Accuracy</p>
+        <p>Analytical Thinking, Storytelling, Collaboration, Leadership, Time Management, Innovation</p>
     </div>
 
     <div class="section">
