--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <h1>Mosaad Mohamed Hendam</h1>
     <p><strong>Data Scientist | MSc in Statistics | Google & IBM Certifications</strong></p>
     <p>Email: <a href="mailto:mosaadhendam8@gmail.com">mosaadhendam8@gmail.com</a> |
-       Phone: +20-1270438720 |
-       Location: Cairo, Egypt</p>
+       0966598341591|00966594559068|
+    Riyadh, Saudi Arabia </p>
     <p>
         <a href="https://linkedin.com/in/mosaad-hendam">LinkedIn</a> |
         <a href="https://github.com/Mosaad2010-star">GitHub</a> |
